fixed overflow

--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -7,6 +7,7 @@
   height: 100%;
   z-index: 5;
   background-color: rgba(0, 0, 0, 0.7);
+  overflow: auto;
 }
 
 .Modal-wrapper {
